Slight improvements for breakers slums.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
@@ -1,7 +1,7 @@
 {% extends "dnd/abstract/place.html" %}
 
 {% block title %}Breakers slums{% endblock %}
-{% block summary %}No summary{% endblock %}
+{% block summary %}Poorest area in whole of Yauhnn. Kids like to play around the pool.{% endblock %}
 
 {% block events %}
     <p>During the day</p>
@@ -62,29 +62,29 @@
     <p>Children mothers at pool</p>
     <dl class="dc">
        <dt>GatherDC:</dt>
-       <dd> < 11 some gossip about the children</dd>
-       <dd> >= 12 sincere worry about the future of their children.
+       <dd>11 < some gossip about the children</dd>
+       <dd>12 >= sincere worry about the future of their children.
             Living in poverty is hard.
             They see how other children are suffering from the work they have to do.
             Someone like <a href="/dnd/characters/Thekesh-Moltabar.html">Thekesh</a> was able to have a better life
        </dd>
-       <dd> >= 15 children job is to put metal inside of rotten fish with their small fingers</dd>
-       <dd> >= 18 children work for <a href="/dnd/characters/Thekesh-Moltabar.html">Thekesh</a></dd>
+       <dd>15 >= children job is to put metal inside of rotten fish with their small fingers</dd>
+       <dd>18 >= children work for <a href="/dnd/characters/Thekesh-Moltabar.html">Thekesh</a></dd>
     </dl>
     <p>Children mothers inside caring for crying children</p>
     <dl class="dc">
        <dt>HealDC:</dt>
-       <dd> < 10 wounds on hands
-       <dd> >= 10 the wounds are festering giving them high fever, life threatening, especially for children</dd>
-       <dd> >= 15 able to subdue the fever and relief pain somewhat</dd>
-       <dd> >= 20 typical infection seen with people working with rotten fish</dd>
+       <dd>10 < wounds on hands
+       <dd>10 >= the wounds are festering giving them high fever, life threatening, especially for children</dd>
+       <dd>15 >= able to subdue the fever and relief pain somewhat</dd>
+       <dd>20 >= typical infection seen with people working with rotten fish</dd>
     </dl>
     <dl class="dc">
        <dt>GatherDC:</dt>
-       <dd> < 10 children were playing (retry allowed)</dd>
-       <dd> >= 10 children suffer injuries when working, but they badly need money</dd>
-       <dd> >= 15 their job is to put metal inside of rotten fish with their small fingers</dd>
-       <dd> >= 18 children work for <a href="/dnd/characters/Thekesh-Moltabar.html">Thekesh</a></dd>
+       <dd>10 < children were playing (retry allowed)</dd>
+       <dd>10 >= children suffer injuries when working, but they badly need money</dd>
+       <dd>15 >= their job is to put metal inside of rotten fish with their small fingers</dd>
+       <dd>18 >= children work for <a href="/dnd/characters/Thekesh-Moltabar.html">Thekesh</a></dd>
     </dl>
 {% endblock %}
 
@@ -95,4 +95,3 @@
 {% block misc %}
     <p>no misc</p>
 {% endblock %}
-
