Some improvements for fisher boats as well and add view to breakers slums.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
@@ -37,6 +37,14 @@
             (SpotDC 13: to notice swimmers deeper in the pool)
         </li>
     </ul>
+
+    <p>View</p>
+    <ul>
+        <li>The docks</li>
+        <li>Massive building with a huge round window showing a face enprofile in glass and lead (see ReligionDC)</li>
+        <li>Walls with a tower on sea side and some kind of fortress in the middle of the bay</li>
+        <li>Behind the ships the whole bank consists of noble houses. The ones closer to the water are smaller.</li>
+    </ul>
 {% endblock %}
 
 {% block achievements %}
