--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/fisher-boats.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/fisher-boats.html
@@ -1,6 +1,6 @@
 {% extends "dnd/abstract/place.html" %}
 
-{% block todo %}{% endblock %}
+{% block todo %}Event at night{% endblock %}
 
 {% block locations %}
     <p><b>
@@ -41,22 +41,22 @@
 {% block knowledges %}
     <dl class="dc">
         <dt>GatherInformationDC:</dt>
-        <dd> >= 10 The men drinking are complaining about the little they earn with fish</dd>
+        <dd> 10 >= The men drinking are complaining about the little they earn with fish</dd>
         <dd>
-            >= 14 The men say that it is all <a href="/dnd/characters/Thekesh-Moltabar.html">Moltabar's</a> fault
+            14 >= The men say that it is all <a href="/dnd/characters/Thekesh-Moltabar.html">Moltabar's</a> fault
             and that they wish they worked for <a href="/dnd/characters/Otalan+delicious-fish-merchant.html"></a>
         </dd>
-        <dd> >= 18 The men drinking earn some money on the side at night</dd>
+        <dd> 18 >= The men drinking earn some money on the side at night</dd>
     </dl>
 
      <dl class="dc">
        <dt>SpotDC:</dt>
-       <dd> >= 10 There are guards watching out over the fishermen from food market. (see ReligionDC)</dd>
+       <dd> 10 >= There are guards watching out over the fishermen from food market. (see ReligionDC)</dd>
     </dl>
 
     <dl class="dc">
        <dt>ReligionDC:</dt>
-       <dd> >= 10 The emblem the guards are wearing and is on the building at the base of the harbor is the Waukeen emblem</dd>
+       <dd> 10 >= The emblem the guards are wearing and is on the building at the base of the harbor is the Waukeen emblem</dd>
     </dl>
 {% endblock %}
 
