Add hook to Horrid Lust in slums.

--- a/src/templatefiles/templates/dnd/concrete/characters/Sjahnsesh+shark-hunter.html
+++ b/src/templatefiles/templates/dnd/concrete/characters/Sjahnsesh+shark-hunter.html
@@ -6,12 +6,22 @@
     A rather skilled ranger, but no match for the party. Willing to help as devotee to Talos.
 {% endblock %}
 
-{% block story %}A Locathah hunting for sharks his whole life. Fed up with being a second rank civilian.{% endblock %}
 {% block motivation %}
     <ul>
         <li>Wants to help the party as long as they are against the nobles</li>
         <li>Will not take it well if party turns away from the poor life</li>
     </ul>
+{% endblock %}
+
+{% block story %}
+    <p>A Locathah hunting for sharks his whole life. Fed up with being a second rank civilian.</p>
+    <h4>Quest</h4>
+    <p>
+        When adventurers first meet he makes a remark about the nice equipment.
+        Then he suggest that if they are going to make the prophecy come true. They'd better get some more.
+        He points out the ship <a href="../places/Yauhnn/slums-district/the-horrid-lust+pirate-inn.html">Horrid Lust</a>
+        to go to for some nice rewards.
+    </p>
 {% endblock %}
 {% block image %}
     <p><img src="{% static "pics/sjhansesh.jpg" %}" alt="sjhansesh"/></p>
