--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/fisher-boats.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/fisher-boats.html
@@ -2,6 +2,10 @@
 
 {% block todo %}Event at night{% endblock %}
 
+{% block events %}
+    <p>As adventurers walk by, <a href="../../../characters/Sjahnsesh+shark-hunter.html">Sjahnsesh</a> makes a remark about equipment.</p>
+{% endblock %}
+
 {% block locations %}
     <p><b>
         Nobody is living in this area. There are just a lot of boats and fishing nets everywhere. It smells like rotten fish.
@@ -30,11 +34,11 @@
 {% endblock %}
 
 {% block creatures %}
-    <h4><a href="/dnd/characters/Sjahnsesh+shark-hunter.html">Sjahnsesh</a> - Locathah captain</h4>
+    <h4><a href="../../../characters/Sjahnsesh+shark-hunter.html">Sjahnsesh</a> - Locathah captain</h4>
     <ul>
         <li>Can be found at the sharks stand.</li>
         <li>A Talos devotee</li>
-        <li>Can help to get to <a href="sea-water-slums.html">sea water slums</a> and <a href="the-horrid-lust+pirate-inn.html">The Horrid Lust</a></li>
+        <li>Can help to get to <a href="the-horrid-lust+pirate-inn.html">The Horrid Lust</a></li>
     </ul>
 {% endblock %}
 
@@ -43,8 +47,8 @@
         <dt>GatherInformationDC:</dt>
         <dd> 10 >= The men drinking are complaining about the little they earn with fish</dd>
         <dd>
-            14 >= The men say that it is all <a href="/dnd/characters/Thekesh-Moltabar.html">Moltabar's</a> fault
-            and that they wish they worked for <a href="/dnd/characters/Otalan+delicious-fish-merchant.html"></a>
+            14 >= The men say that it is all <a href="../../../characters/Thekesh-Moltabar.html">Moltabar's</a> fault
+            and that they wish they worked for <a href="../../../characters/Otalan+delicious-fish-merchant.html"></a>
         </dd>
         <dd> 18 >= The men drinking earn some money on the side at night</dd>
     </dl>
