Add the basics for most of the slums.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
@@ -94,6 +94,11 @@
        <dd>15 >= their job is to put metal inside of rotten fish with their small fingers</dd>
        <dd>18 >= children work for <a href="/dnd/characters/Thekesh-Moltabar.html">Thekesh</a></dd>
     </dl>
+
+    <dl class="dc">
+       <dt>ReligionDC:</dt>
+       <dd> 10 >= The emblem on the building at the base of the harbor is the Waukeen emblem</dd>
+    </dl>
 {% endblock %}
 
 {% block items %}
