--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/sea-water-slums.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/sea-water-slums.html
@@ -1,8 +1,18 @@
 {% extends "dnd/abstract/place.html" %}
 
-{% block todo %}{% endblock %}
+{% block title %}Sea water slums{% endblock %}
+{% block summary %}These slums are home to full breed Locathah only.{% endblock %}
+
+{% block events %}
+    <p>Nightfall (smuggling!)</p>
+{% endblock %}
 
 {% block locations %}
+    <p><b>
+        These slums are home to full breed Locathah only. It sits below the <a href="breakers-slums.html">breakers slums</a>,
+        but also the <a href="slums-market.html">slums market</a> and even all the way up to <a href="harbor-slums.html">harbor slums</a>
+    </b></p>
+
     <p>Places of interest in this area</p>
     <ul>
         <li>Secret entrance into one of the homes in <a href="cave-slums.html">cave slums</a></li>
@@ -14,13 +24,30 @@
     </ul>
 {% endblock %}
 
-{% block events %}
+{% block achievements %}
+    <p>no achievements</p>
+{% endblock %}
 
-    <p>Nightfall (smuggling!)</p>
-
-
+{% block creatures %}
+    <p>no creatures</p>
 {% endblock %}
 
 {% block traps %}
     <p>treacherous current!</p>
+{% endblock %}
+
+{% block conditions %}
+    <p>no conditions</p>
+{% endblock %}
+
+{% block knowledges %}
+   <p>no knowledges</p>
+{% endblock %}
+
+{% block items %}
+    <p>no items</p>
+{% endblock %}
+
+{% block misc %}
+    <p>no misc</p>
 {% endblock %}
