--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/the-horrid-lust+pirate-inn.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/the-horrid-lust+pirate-inn.html
@@ -1,12 +1,24 @@
 {% block title %}The Horrid Lust (pirate inn){% endblock %}
-{% block summary %}No summary{% endblock %}
+{% block summary %}A boat that lies just outside the harbor, where different laws count.{% endblock %}
 
 {% block events %}
-    <p>no events</p>
+    <p>An old sailor shouts who is there and asks to be left in peace. He lowers a ladder when you say the password.</p>
+    <p>When entering the main area with the bow of speed a hot headed barbarian will try to get it back together with his comrades.</p>
+    <p>When party defeats the group the dread pirate is impressed and asks if they'd be interested in a job.</p>
 {% endblock %}
 
 {% block locations %}
-    <p>no locations</p>
+    <p>
+        The ship looks neglected. Sea weed has grown up to the bough.
+        It sails have started to mould. You wonder when it will sink.
+    </p>
+    <p>
+        The deck is a big mess of old stuff.
+        From the inside the boat looks a lot better.
+        It is clean and well preserved.
+        A stairs leads to one big room where the cargo used to be.
+        It is turned into a rather luxurious inn.
+    </p>
 {% endblock %}
 
 {% block achievements %}
@@ -14,7 +26,8 @@
 {% endblock %}
 
 {% block creatures %}
-    <p>no creatures</p>
+    <p>A 10th level barbarian, rogue, cleric and sorcerer</p>
+    <p>A 15th level dread pirate and comrades</p>
 {% endblock %}
 
 {% block traps %}
@@ -34,5 +47,5 @@
 {% endblock %}
 
 {% block misc %}
-    <p>If the ranger equipment found on <a href="../../big-ant-island/beach-right.html">big ant islands</a> is worn, the ranger's friends will make trouble</p>
+    <p>no misc</p>
 {% endblock %}
