--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-gildes.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-gildes.html
@@ -6,4 +6,7 @@
         <li>Bard comes to play here</li>
         <li>Drinking adventurer may get drunk.</li>
     </ul>
+    <p>
+        If they frisk <a href="../../../characters/Mirika+insane-half-elf.html">Mirika</a> they find the keys to her room in this inn.
+    </p>
 {% endblock %}
