--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
@@ -4,6 +4,10 @@
 {% block summary %}Poorest area in whole of Yauhnn. Kids like to play around the pool.{% endblock %}
 
 {% block events %}
+    <p>Trying to get on land through the breaker slums is perilous.
+        The boat will break on the cliffs. With a ReflexDC 15 they can
+    </p>
+
     <p>During the day</p>
     <ul>
         <li>
@@ -36,6 +40,7 @@
             The pool in the middle of this area leads to <a href="sea-water-slums.html">The Sea Water Slums</a>
             (SpotDC 13: to notice swimmers deeper in the pool)
         </li>
+        <li>Breakers slums is closest to the open <a href="../sea.html">sea</a> (which brings some hazards)</li>
     </ul>
 
     <p>View</p>
@@ -56,7 +61,7 @@
 {% endblock %}
 
 {% block traps %}
-    <p>no traps</p>
+    <p>When</p>
 {% endblock %}
 
 {% block conditions %}
