--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/fisher-boats.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/fisher-boats.html
@@ -1,9 +1,25 @@
 {% extends "dnd/abstract/place.html" %}
 
-{% block todo %}Event at night{% endblock %}
+{% block title %}The fisher boats{% endblock %}
+
+{% block summary %}
+    <p>
+        Safest place to get to land for smaller boats without paying harbor fees.
+        Bit of a market place for fishermen, but only unofficially.
+    </p>
+{% endblock %}
 
 {% block events %}
-    <p>As adventurers walk by, <a href="../../../characters/Sjahnsesh+shark-hunter.html">Sjahnsesh</a> makes a remark about equipment.</p>
+    <p>
+        At night guards are walking the second tier of the city with torches.
+        They overlook the fisher boats, but are not terribly enthusiastic to go down.
+    </p>
+
+    <p>
+        As adventurers walk by during the day, <a href="../../../characters/Sjahnsesh+shark-hunter.html">Sjahnsesh</a>
+        makes a remark about shabby equipment. He suggests to take them to some good (shady) employers at
+        <a href="the-horrid-lust+pirate-inn.html">The Horrid Lust</a>.
+    </p>
 {% endblock %}
 
 {% block locations %}
