--- a/src/templatefiles/templates/dnd/concrete/obstacles/02-escape-big-ant-island/04-finding-church-of-Talos.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/02-escape-big-ant-island/04-finding-church-of-Talos.html
@@ -3,6 +3,13 @@
 {% block title %}Finding The Temple of Talos{% endblock %}
 {% block summary %}Entering the city the adventurers need to get to a safe haven.{% endblock %}
 
+{% block achievements %}
+    <p>
+        When entering church of Talos proceed with
+        <a href="../03-poor-life-in-Yauhnn/00-exploring-the-city.html">exploring the city</a>
+    </p>
+{% endblock %}
+
 {% block events %}
     <p>
         As it grows darker adventurers suddenly see a slowly flickering light in the distance.
@@ -12,7 +19,7 @@
 
     <p>
         They may decide to enter the <a href="../../places/Yauhnn/slums-district/church-of-Valkur.html">lighthouse/church</a>.
-        Which will lead to church of Talos.
+        Which will lead to <a href="../../places/Yauhnn/slums-district/church-of-Talos.html">church of Talos</a>.
         Or <a href="../../characters/Pomin+gnome-cormyr-spy.html">Pomin</a>/Locathah may lead them there upon seeing their condition.
         Any contact with guards in their state will lead to <a href="../../places/Yauhnn/slums-district/prison.html">prison</a>
         and if they do not escape death sentence by Waukeen priests.
@@ -22,15 +29,9 @@
 
 {% block locations %}
     <p>
-        Once near the city they have to on land from <a href="../../places/Yauhnn/sea.html">the sea</a>.
-        These are their options:
+        Once near the city they have to go on land from <a href="../../places/Yauhnn/sea.html">the sea</a> first.
     </p>
-    <ul>
-        <li>When they were helped <a href="../../characters/Sjahnsesh+shark-hunter.html">Sjahnsesh</a> will lead them to
-        <a href="../../places/Yauhnn/slums-district/fisher-boats.html">fishers boats</a> (evade guards)</li>
-        <li>Go to bright <a href="../../places/Yauhnn/trade-district/harbor">harbor</a> with their condition.</li>
-        <li>Try to go for <a href="../../places/Yauhnn/slums-district/breakers-slums.html">darker area</a></li>
-    </ul>
+
 {% endblock %}
 
 {% block knowledges %}
