Give a bit more structure to chapter 3.

--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/00-exploring-the-city.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/00-exploring-the-city.html
@@ -4,15 +4,45 @@
 {% block summary %}Getting to know Yauhnn and its inhabitants.{% endblock %}
 
 {% block events %}
-    <p>no events</p>
+    <p><b>
+        After receiving healing from the taint on the Big Ant Island everybody went to sleep and didn't get up until late.
+        Everybody wakes up in a shack. There are cloths next to you that smell like fish.
+        Your weapons are there as well.
+    </b></p>
+
+    <p>
+        When visiting <a href="../../characters/Janala+talos-oracle.html">Janala</a>
+        she explains that the entire slums are there to help.
+        She also offers any kind of service that you may need.
+        She is an Oracle of Talos and she's an expert with the following spells.
+    </p>
+
+    <ul>
+        <li><a href="http://dndsrd.net/spellsHtoL.html#identify">identify</a></li>
+        <li><a href="http://dndsrd.net/spellsAtoB.html#augury">augury</a></li>
+        <li><a href="http://dndsrd.net/spellsDtoE.html#divination">divination</a></li>
+        <li><a href="http://dndsrd.net/spellsS.html#scrying">scrying</a></li>
+        <li><a href="http://dndsrd.net/spellsC.html#commune">commune</a></li>
+        <li><a href="http://dndsrd.net/spellsHtoL.html#legend-lore">legend lore</a></li>
+    </ul>
+
 {% endblock %}
 
 {% block locations %}
-    <p>no locations</p>
+    <p>
+        A young man called <a href="../../characters/Valesh+half-Locathah-guide.html">Valesh</a> introduces himself.
+        He will act as a guide to the party in the city of Yauhnn
+        There are a few things that the adventurers can undertake:
+    </p>
+    <ul>
+        <li><a href="../../characters/Janala+talos-oracle.html">Janala</a> ask you to visit her in the morning (see events).</li>
+        <li>Explore the slums.</li>
+        <li>Go to the big market.</li>
+    </ul>
 {% endblock %}
 
 {% block achievements %}
-    <p>no achievements</p>
+    <p>Visiting the market leads to <a href="01-assasination-attempt.html">assassination attempt</a></p>
 {% endblock %}
 
 {% block creatures %}
@@ -24,11 +54,19 @@
 {% endblock %}
 
 {% block conditions %}
-    <p>no conditions</p>
+    <p>When Faradrim is confronted with all services he needs to make a Will save to resist</p>
+    <dl class="dc">
+        <dt>WillDC: (she's ugly as hell -5)</dt>
+        <dd> 10 < You arrange to have sex with her right there and now. Afterwards it feels dirty.</dd>
+    </dl>
 {% endblock %}
 
 {% block knowledges %}
-    <p>no knowledges</p>
+    <p>About the shack everybody wakes up in:</p>
+    <dl class="dc">
+        <dt>SurvivalDC:</dt>
+        <dd> 15 >= Normally 4 to 6 creatures occupy this tiny space.</dd>
+    </dl>
 {% endblock %}
 
 {% block items %}
