Finish most of the slums.

--- a/src/templatefiles/templates/dnd/concrete/characters/stats/janala.html
+++ b/src/templatefiles/templates/dnd/concrete/characters/stats/janala.html
@@ -33,3 +33,21 @@
 {% block feats %}Skill focus(religion), 4{% endblock %}
 {% block grapple %}{% endblock %}
 {% block gear %}Shortspear +1{% endblock %}
+
+{% block descriptions %}
+    <h4>Oracle</h4>
+    <p>
+        She's an expert with the following spells.
+    </p>
+
+    <ul>
+        <li><a href="http://dndsrd.net/spellsHtoL.html#identify">identify</a></li>
+        <li><a href="http://dndsrd.net/spellsAtoB.html#augury">augury</a></li>
+        <li><a href="http://dndsrd.net/spellsDtoE.html#divination">divination</a></li>
+        <li><a href="http://dndsrd.net/spellsS.html#scrying">scrying</a></li>
+        <li><a href="http://dndsrd.net/spellsC.html#commune">commune</a></li>
+        <li><a href="http://dndsrd.net/spellsHtoL.html#legend-lore">legend lore</a></li>
+    </ul>
+
+
+{% endblock %}
