--- a/src/templatefiles/templates/dnd/concrete/obstacles/01-born-again/05-enlightenment.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/01-born-again/05-enlightenment.html
@@ -1,7 +1,7 @@
 {% extends "dnd/abstract/obstacle.html" %}
 
 {% block title %}Enlightenment{% endblock %}
-{% block summary %}Adventurers learn about Talos, Hanuman and the relics.{% endblock %}
+{% block summary %}Adventurers learn about Talos, Hanuman, the relics, the island & a prophecy.{% endblock %}
 
 {% block events %}
     <p>no events</p>
