--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/00-exploring-the-city.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/00-exploring-the-city.html
@@ -4,45 +4,27 @@
 {% block summary %}Getting to know Yauhnn and its inhabitants.{% endblock %}
 
 {% block events %}
-    <p><b>
-        After receiving healing from the taint on the Big Ant Island everybody went to sleep and didn't get up until late.
-        Everybody wakes up in a shack. There are cloths next to you that smell like fish.
-        Your weapons are there as well.
-    </b></p>
-
     <p>
-        When visiting <a href="../../characters/Janala+talos-oracle.html">Janala</a>
-        she explains that the entire slums are there to help.
-        She also offers any kind of service that you may need.
-        She is an Oracle of Talos and she's an expert with the following spells.
+        After receiving healing from the taint on the Big Ant Island everybody got appointed a little shack to sleep in.
+        All shacks are part of a cave network in the cliff side. They have a beautiful view upon the sea.
+        You were given very simple cloths (1 sp) that smell like fish.
     </p>
 
-    <ul>
-        <li><a href="http://dndsrd.net/spellsHtoL.html#identify">identify</a></li>
-        <li><a href="http://dndsrd.net/spellsAtoB.html#augury">augury</a></li>
-        <li><a href="http://dndsrd.net/spellsDtoE.html#divination">divination</a></li>
-        <li><a href="http://dndsrd.net/spellsS.html#scrying">scrying</a></li>
-        <li><a href="http://dndsrd.net/spellsC.html#commune">commune</a></li>
-        <li><a href="http://dndsrd.net/spellsHtoL.html#legend-lore">legend lore</a></li>
-    </ul>
+    <p>
+        Before letting you rest <a href="../../characters/Janala+talos-oracle.html">Janala</a>
+        lets you know that the entire slums are there to help.
+        As an Oracle of Talos she also offers any kind of service that you may need (dirty -> WillDC).
+        You can find her in the Church of Talos.
+    </p>
 
 {% endblock %}
 
 {% block locations %}
-    <p>
-        A young man called <a href="../../characters/Valesh+half-Locathah-guide.html">Valesh</a> introduces himself.
-        He will act as a guide to the party in the city of Yauhnn
-        There are a few things that the adventurers can undertake:
-    </p>
-    <ul>
-        <li><a href="../../characters/Janala+talos-oracle.html">Janala</a> ask you to visit her in the morning (see events).</li>
-        <li>Explore the slums.</li>
-        <li>Go to the big market.</li>
-    </ul>
+    <p>Exploring the city starts from the <a href="../../places/Yauhnn/slums-district/cave-slums.html">cave slums</a></p>
 {% endblock %}
 
 {% block achievements %}
-    <p>Visiting the market leads to <a href="01-assasination-attempt.html">assassination attempt</a></p>
+    <p>no achievements</p>
 {% endblock %}
 
 {% block creatures %}
