--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
@@ -41,6 +41,7 @@
             (SpotDC 13: to notice swimmers deeper in the pool)
         </li>
         <li>Breakers slums is closest to the open <a href="../sea.html">sea</a> (which brings some hazards)</li>
+        <li>You can go to area where <a href="fisher-boats.html">fisher boats</a> are docked</li>
     </ul>
 
     <p>View</p>
