--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/church-of-Talos.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/church-of-Talos.html
@@ -4,7 +4,8 @@
 {% block summary %}Secret church in Yauhnn for the God of Destruction.{% endblock %}
 
 {% block events %}
-    <p>When entering for the first time (through church of Valkur</p>
+    <h4>First time</h4>
+    <p>When entering for the first time (through church of Valkur)</p>
     <ol>
         <li>Adventures enter through curtains to a bigger cave.</li>
         <li>Two half-Locathah are in a bloody fist fight right in front of their noses.</li>
@@ -13,6 +14,13 @@
         <li>Everybody drops to their knees in worship</li>
         <li>All wounds and taint is taken care off by <a href="../../../characters/Janala+talos-oracle.html">Janala</a></li>
     </ol>
+
+    <h4>Second time</h4>
+    <p>
+        When entering second time <a href="../../../characters/Janala+talos-oracle.html">Janala</a> explains her gifts.
+        Then offers a demonstration and does a definition.
+        "where ever the faithful suffer, Talos his work must be done"
+    </p>
 {% endblock %}
 
 {% block locations %}
