--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/harbor-slums.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/harbor-slums.html
@@ -21,7 +21,7 @@
 
     <p>
         A lot of people live here. A little less cramped than in the caves, but still small quarters and poor.
-        An inn is the only noticeable place here.
+        An inn called The Smiling Fish is the only noticeable place here.
     </p>
 
     <p>View</p>
@@ -61,5 +61,5 @@
 {% endblock %}
 
 {% block misc %}
-    <p>no misc</p>
+    <p><a href="../../../characters/Mirika+insane-half-elf.html">Mirika</a> still has some belongings here.</p>
 {% endblock %}
