Re-ordering chapter 3 parts.

--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/00-exploring-the-city.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/00-exploring-the-city.html
@@ -24,7 +24,10 @@
 {% endblock %}
 
 {% block achievements %}
-    <p>no achievements</p>
+    <ul>
+        <li>Walking the slumbs reveals opportunities to <a href="01-earning-on-the-side.html">earn on the side</a></li>
+        <li>Visiting the market will lead to <a href="02-assasination-attempt.html">assassination attempt</a></li>
+    </ul>
 {% endblock %}
 
 {% block creatures %}
