Update slums to hold a smuggling route.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/sea.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/sea.html
@@ -14,12 +14,20 @@
 {% endblock %}
 
 {% block locations %}
+
     <p>When on the sea around Yauhnn. There are a few ways to get to mainland</p>
     <ul>
         <li>The <a href="slums-district/breakers-slums.html">breaker slums</a> is toughest area to get to land and will lead to stranding.</li>
         <li>The <a href="trade-district/harbor/">harbor</a> is easiest, but small boats are not allowed.</li>
         <li>The <a href="slums-district/fisher-boats.html">fisher boats</a> is easiest and safest way to get to land. Second tier of city is guarded.</li>
     </ul>
+
+    <p>
+        There is also a secret way to on land.
+        When defying the currents somebody can enter a submarine cave that leads to the entrance of a secret route in
+        <a href="slums-district/sea-water-slums.html">sea water slums</a>.
+    </p>
+
 {% endblock %}
 
 {% block achievements %}
