--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
@@ -51,6 +51,14 @@
         <li>Walls with a tower on sea side and some kind of fortress in the middle of the bay</li>
         <li>Behind the ships the whole bank consists of noble houses. The ones closer to the water are smaller.</li>
     </ul>
+
+    <p>Hidden locations</p>
+    <ul>
+        <li>
+            A shack that leads to underground tunnels in <a href="sea-water-slums.html">sea water slums</a>.
+            The shack is locked and 3x Locathah hold guard inside.
+        </li>
+    </ul>
 {% endblock %}
 
 {% block achievements %}
@@ -105,6 +113,7 @@
        <dt>ReligionDC:</dt>
        <dd> 10 >= The emblem on the building at the base of the harbor is the Waukeen emblem</dd>
     </dl>
+
 {% endblock %}
 
 {% block items %}
