--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/sea-water-slums.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/sea-water-slums.html
@@ -4,7 +4,7 @@
 {% block summary %}These slums are home to full breed Locathah only.{% endblock %}
 
 {% block events %}
-    <p>Nightfall (smuggling!)</p>
+    <p>Night time smuggeling</p>
 {% endblock %}
 
 {% block locations %}
@@ -13,15 +13,27 @@
         but also the <a href="slums-market.html">slums market</a> and even all the way up to <a href="harbor-slums.html">harbor slums</a>
     </b></p>
 
-    <p>Places of interest in this area</p>
-    <ul>
-        <li>Secret entrance into one of the homes in <a href="cave-slums.html">cave slums</a></li>
-    </ul>
     <p>Neighbooring area's</p>
     <ul>
         <li>One can enter the harbor waters by one of the horizontal exists</li>
         <li>There is a vertical exit to <a href="breakers-slums.html">Breakers Slums</a></li>
     </ul>
+    <h4>Secret tunneling</h4>
+
+    <p>
+        <a href="../../../characters/Thekesh-Moltabar.html">Thekesh (Moltabar)</a>
+        runs a secret route from the sea, through the sea water slums, into a shack in <a href="breakers-slums.html">breaker slums</a>.
+        The list below describes all chambers on this route from sea to breaker slums.
+    </p>
+    <ol>
+        <li>Entrance from the (turbulent) sea initially only reveals what seems like a small abandoned cave.</li>
+        <li>A secret door (SearchDC30) reveals a man made tunnel</li>
+        <li>This tunnel leads to an area where three Locathah hold guard</li>
+        <li>The next chamber has a ceiling that is filled up with mithral at night (SpotDC10)</li>
+        <li>A very narrow natural burrow leads to another chamber</li>
+        <li>The ceiling of this chamber is filled with dead fish at night. The burrow is hidden (SearchDC30)</li>
+        <li>The ceiling of this chamber has a hatch into one of the homes in <a href="breakers-slums.html">breakers slums</a></li>
+    </ol>
 {% endblock %}
 
 {% block achievements %}
