Adding the shack as a chamber to the route.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/sea-water-slums.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/sea-water-slums.html
@@ -33,6 +33,7 @@
         <li>A very narrow natural burrow leads to another chamber</li>
         <li>The ceiling of this chamber is filled with dead fish at night. The burrow is hidden (SearchDC30)</li>
         <li>The ceiling of this chamber has a hatch into one of the homes in <a href="breakers-slums.html">breakers slums</a></li>
+        <li>The home is nothing but a shack. Nobody lives there, but boxes with dead fish get stored there and 3x Locathah hold guard.</li>
     </ol>
 {% endblock %}
 
