Start integrating fish scam notes into the story.

--- a/src/templatefiles/templates/dnd/concrete/characters/Kalong+waukeen-inquisitor.html
+++ b/src/templatefiles/templates/dnd/concrete/characters/Kalong+waukeen-inquisitor.html
@@ -13,7 +13,7 @@
     </p>
     <p>
         Special: if assassination attempt succeeds will be introduced as a researcher to that murder.
-        <a href="Thekesh-Moltabar.html">Moltabar</a> will take the fall for the murder to protect other FTG members
+        <a href="Thekesh-Moltabar+naieve-entrepeneur.html">Moltabar</a> will take the fall for the murder to protect other FTG members
     </p>
 {% endblock %}
 
