--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/06-fish-monopoly.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/06-fish-monopoly.html
@@ -1,2 +1,6 @@
 <p>The adventurers notice that they are tailed</p>
+
+<p>It is thought that the guards are bribed (but they are just incompetent)</p>
+<p>The only competitor left is someone who can do seasoning. This receipe is about to get nicked.</p>
+
 <p>Hungry adventurers should be delighted with fish from Otalan :)</p>
