--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
@@ -3,12 +3,12 @@
 {% block title %}Breakers slums{% endblock %}
 {% block summary %}Poorest area in whole of Yauhnn. Kids like to play around the pool.{% endblock %}
 
-{% block events %}
-    <p>Trying to get on land through the breaker slums is perilous.
-        The boat will break on the cliffs. With a ReflexDC 15 they can
-    </p>
+{% block todo %}
+Locathah stats
+{% endblock %}
 
-    <p>During the day</p>
+{% block events %}
+    <h4>During the day</h4>
     <ul>
         <li>
             Children come running towards them, follow them everywhere.
