--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/fisher-boats.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/fisher-boats.html
@@ -17,7 +17,7 @@
 
     <p>
         As adventurers walk by during the day, <a href="../../../characters/Sjahnsesh+shark-hunter.html">Sjahnsesh</a>
-        makes a remark about shabby equipment. He suggests to take them to some good (shady) employers at
+        makes a remark about shabby equipment. He suggests to go to some good (shady) employers at
         <a href="the-horrid-lust+pirate-inn.html">The Horrid Lust</a>.
     </p>
 {% endblock %}
@@ -63,7 +63,7 @@
         <dt>GatherInformationDC:</dt>
         <dd> 10 >= The men drinking are complaining about the little they earn with fish</dd>
         <dd>
-            14 >= The men say that it is all <a href="../../../characters/Thekesh-Moltabar.html">Moltabar's</a> fault
+            14 >= The men say that it is all <a href="../../../characters/Thekesh-Moltabar+naieve-entrepeneur.html">Moltabar's</a> fault
             and that they wish they worked for <a href="../../../characters/Otalan+delicious-fish-merchant.html"></a>
         </dd>
         <dd> 18 >= The men drinking earn some money on the side at night</dd>
